--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="estilo.css">
     <script src="Script/script.js"></script>
 </head>
-<body class="principal">
+<body>
     <!-- Cabezera -->
     <header class="encabezado">
         <div class="logo">
@@ -27,15 +27,32 @@
 
         <div class="usuario">
             <div>
-                <img src="img/icons8-usuario-64.webp"
+                <img src="img/Header/icons8-usuario-64.webp"
                 alt="icono de usuario"
-                width="40px"
-                height="40px">
+                width="45px"
+                height="45px">
             </div>
             <h5>José León Carrera</h5>
         </div>
     </header>
 
-
+    <Main>
+        <section class="galeria3D">
+            <h1 class="title">Mundo JMLC</h1>
+            <div style="--count: 10; --duration: 16s;">
+                <img class="img3D" src="https://images.pexels.com/photos/614117/pexels-photo-614117.jpeg" style="--i: 1;">
+                <img class="img3D" src="https://images.unsplash.com/photo-1505238680356-667803448bb6?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="--i: 2;">
+                <img class="img3D" src="https://images.pexels.com/photos/270360/pexels-photo-270360.jpeg" style="--i: 3;">
+                <img class="img3D" src="https://images.pexels.com/photos/6424587/pexels-photo-6424587.jpeg" style="--i: 4;">
+                <img class="img3D" src="https://images.pexels.com/photos/29445973/pexels-photo-29445973.jpeg" style="--i: 5;">
+                <img class="img3D" src="https://images.pexels.com/photos/10725897/pexels-photo-10725897.jpeg" style="--i: 6;">
+                <img class="img3D" src="https://images.pexels.com/photos/3888151/pexels-photo-3888151.jpeg" style="--i: 7;">
+                <img class="img3D" src="https://images.pexels.com/photos/34600/pexels-photo.jpg" style="--i: 8;">
+                <img class="img3D" src="https://images.pexels.com/photos/943096/pexels-photo-943096.jpeg" style="--i: 9;">
+                <img class="img3D" src="https://images.pexels.com/photos/6424589/pexels-photo-6424589.jpeg" style="--i: 10;">
+            </div>
+        </section>
+        <script src="Script/galeria3D.js"></script>
+    </Main>
 </body>
 </html>
