--- a/index.html
+++ b/index.html
@@ -36,23 +36,89 @@
         </div>
     </header>
 
-    <Main>
-        <section class="galeria3D">
-            <h1 class="title">Mundo JMLC</h1>
-            <div style="--count: 10; --duration: 16s;">
-                <img class="img3D" src="https://images.pexels.com/photos/614117/pexels-photo-614117.jpeg" style="--i: 1;">
-                <img class="img3D" src="https://images.unsplash.com/photo-1505238680356-667803448bb6?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="--i: 2;">
-                <img class="img3D" src="https://images.pexels.com/photos/270360/pexels-photo-270360.jpeg" style="--i: 3;">
-                <img class="img3D" src="https://images.pexels.com/photos/6424587/pexels-photo-6424587.jpeg" style="--i: 4;">
-                <img class="img3D" src="https://images.pexels.com/photos/29445973/pexels-photo-29445973.jpeg" style="--i: 5;">
-                <img class="img3D" src="https://images.pexels.com/photos/10725897/pexels-photo-10725897.jpeg" style="--i: 6;">
-                <img class="img3D" src="https://images.pexels.com/photos/3888151/pexels-photo-3888151.jpeg" style="--i: 7;">
-                <img class="img3D" src="https://images.pexels.com/photos/34600/pexels-photo.jpg" style="--i: 8;">
-                <img class="img3D" src="https://images.pexels.com/photos/943096/pexels-photo-943096.jpeg" style="--i: 9;">
-                <img class="img3D" src="https://images.pexels.com/photos/6424589/pexels-photo-6424589.jpeg" style="--i: 10;">
+    <main class="contenido-principal">
+        
+        <section>
+            <section class="galeria3D">
+                <h1 class="title">Mundo JMLC</h1>
+                <div style="--count: 10; --duration: 16s;">
+                    <img class="img3D" src="https://images.pexels.com/photos/614117/pexels-photo-614117.jpeg" style="--i: 1;">
+                    <img class="img3D" src="https://images.unsplash.com/photo-1505238680356-667803448bb6?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="--i: 2;">
+                    <img class="img3D" src="https://images.pexels.com/photos/270360/pexels-photo-270360.jpeg" style="--i: 3;">
+                    <img class="img3D" src="https://images.pexels.com/photos/6424587/pexels-photo-6424587.jpeg" style="--i: 4;">
+                    <img class="img3D" src="https://images.pexels.com/photos/29445973/pexels-photo-29445973.jpeg" style="--i: 5;">
+                    <img class="img3D" src="https://images.pexels.com/photos/10725897/pexels-photo-10725897.jpeg" style="--i: 6;">
+                    <img class="img3D" src="https://images.pexels.com/photos/3888151/pexels-photo-3888151.jpeg" style="--i: 7;">
+                    <img class="img3D" src="https://images.pexels.com/photos/34600/pexels-photo.jpg" style="--i: 8;">
+                    <img class="img3D" src="https://images.pexels.com/photos/943096/pexels-photo-943096.jpeg" style="--i: 9;">
+                    <img class="img3D" src="https://images.pexels.com/photos/6424589/pexels-photo-6424589.jpeg" style="--i: 10;">
+                </div>
+            </section> 
+             <script src="Script/galeria3D.js"></script>       
+        </section>
+        
+        <section class="Sobre-mi">
+            <div class="mensaje">
+                <div class="element">
+                    Mi nombre es José Manuel León Carrera (JMLC). Nací y resido en Daule, Ecuador. Actualmente 
+                    me desempeño en el mantenimiento preventivo de computadoras, actividad que me ha permitido 
+                    fortalecer mis conocimientos técnicos y mi contacto directo con la tecnología.
+                    </br>
+                    Soy un apasionado de la tecnología y un aprendiz autodidacta en el área de los lenguajes de 
+                    programación. Actualmente estudio la carrera de Ingeniería de Software en la Facultad de 
+                    Ciencias Matemáticas y Físicas de la Universidad de Guayaquil, donde continúo desarrollando 
+                    mis habilidades en el área tecnológica.
+                    <br>
+                    Mi principal meta es seguir adquiriendo nuevos conocimientos en programación, mantenerme en 
+                    constante aprendizaje y crecer profesionalmente dentro del ámbito del desarrollo de software, 
+                    aportando soluciones innovadoras y eficientes.
+                </div>
+            </div>
+            <div class="imagenes">
+                <img
+                id="man1"
+                alt="mancha1"
+                width="350px"
+                height="450px"
+                src="img/Main/SobreMi/manchas-_2_.webp"
+                />
+
+                <img
+                id="man2"
+                alt="mancha2"
+                width="250px"
+                height="250px"
+                src="img/Main/SobreMi/fondoImg.webp"
+                />
+
+                <img
+                id="man3"
+                alt="mancha2"
+                width="250px"
+                height="250px"
+                src="img/Main/SobreMi/jmlc16.webp"
+                />
             </div>
         </section>
-        <script src="Script/galeria3D.js"></script>
-    </Main>
+        <section class="habilidades">
+            <h3>Habilidades Técnicas</h3>
+            <div class="tecnologias">     
+                <div>
+                    <img id="imgTec" src="img/Main/Tecnologias/java.webp">
+                    <img id="imgTec" src="img/Main/Tecnologias/c_sahrp.webp">
+                    <img id="imgTec" src="img/Main/Tecnologias/c++.webp">
+                    <img id="imgTec" src="img/Main/Tecnologias/python.webp">
+                    <img id="imgTec" src="img/Main/Tecnologias/html.webp">
+                </div>
+                <div>
+                    <img id="imgTec" src="img/Main/Tecnologias/css.webp">
+                    <img id="imgTec" src="img/Main/Tecnologias/javascript.webp">
+                    <img id="imgTec" src="img/Main/Tecnologias/postgreSQL.webp">
+                    <img id="imgTec"src="img/Main/Tecnologias/Supabase.webp">
+                    <img id="imgTec" src="img/Main/Tecnologias/firebase.webp">
+                </div>         
+            </div>
+        </section>
+    </main>
 </body>
 </html>
