COnsumir las apis de git hub para mostrar mis proyectos publico y aparte usamos en css un sentenia para recrear uhna fración y el contenido separse en 2 o 3 columnas

--- a/index.html
+++ b/index.html
@@ -119,6 +119,16 @@
                 </div>         
             </div>
         </section>
+        <section class="proyectos">
+            <h3 id="titulo_Proyecto">Proyectos en Git hub</h3>
+            <div class="proyectos_GitHub">
+                <div id="contenedorProyecto"></div>
+                <div>
+                    <img id="imgGit_hub" src="img/IconoGitHub/git_hub.webp">
+                </div>
+            </div>
+            <script src="Script/script.js"></script>
+        </section>
     </main>
 </body>
 </html>
